@@ -7,6 +7,7 @@ v0.4.1:
     - Added !infinite_lives setting, to more easily toggle between infinite and finite lives. The lose_lives table can still be used to prevent life loss in some levels when using !infinite_lives = 0.
     - Fixed compilation error introduced in v0.3.3, when using !sram_feature = 1 and the SRAM+/BW-RAM+ patch is installed in the ROM.
     - Moved Retry's SRAM tables to separate "sram_tables.asm" file for more simplicity of use and consistency, and made it insert only when using !sram_feature = 1 to save some ROM space.
+    - Changed ObjecTool code check to runtime, so it works fine if ObjecTool is patched after Retry.
 
 v0.4.0:
     - Changed default !pipe_entrance_freeze setting to 1 to avoid inconsistencies.
